--- a/build.gradle
+++ b/build.gradle
@@ -152,17 +152,20 @@ jar {
 
 // configure the maven publication
 publishing {
+	repositories {
+		mavenLocal()
+		maven {
+			url = "https://maven.glass-launcher.net/releases"
+			credentials {
+				username "${project.calmilamsy_secret_publishing_cave_username}"
+				password "${project.calmilamsy_secret_publishing_cave_password}"
+			}
+		}
+	}
+
 	publications {
 		mavenJava(MavenPublication) {
 			from components.java
 		}
-	}
-
-	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-	repositories {
-		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
 	}
 }
