--- a/build.gradle
+++ b/build.gradle
@@ -154,11 +154,23 @@ jar {
 publishing {
 	repositories {
 		mavenLocal()
-		maven {
-			url = "https://maven.glass-launcher.net/releases"
-			credentials {
-				username "${project.calmilamsy_secret_publishing_cave_username}"
-				password "${project.calmilamsy_secret_publishing_cave_password}"
+		if(project.hasProperty("calmilamsy_secret_publishing_cave_username")){
+			maven {
+				url = "https://maven.glass-launcher.net/releases"
+				credentials {
+					username "${project.calmilamsy_secret_publishing_cave_username}"
+					password "${project.calmilamsy_secret_publishing_cave_password}"
+				}
+			}
+		}
+
+		if(project.hasProperty("nyarepo_publishing_cave_username")){
+			maven {
+				url = "https://maven.fildand.cz/releases"
+				credentials {
+					username "${project.nyarepo_publishing_cave_username}"
+					password "${project.nyarepo_publishing_cave_password}"
+				}
 			}
 		}
 	}
