--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 	# check these on https://fabricmc.net/develop
 	minecraft_version=b1.7.3
 	yarn_mappings=b1.7.3+a00e3b0
-	loader_version=0.14.24-babric.1
+	loader_version=0.16.7
 
 # Mod Properties
 	mod_version=1.1.1
@@ -14,9 +14,9 @@ org.gradle.daemon=false
 	archives_base_name=gambac
 
 # Dependencies
-	stapi_version=2.0-alpha.1.1
+	stapi_version=2.0-alpha.2.4
 
 # Extra Dependencies
 	gcapi_version=2.0.2
 	howmanyitems_version=5.1.1
-	modmenu_version=v1.8.5-beta.3
+	modmenu_version=1.8.5-beta.9
