--- a/gradle.properties
+++ b/gradle.properties
@@ -4,17 +4,17 @@ org.gradle.daemon=false
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=b1.7.3
-	yarn_mappings=b1.7.3+c6a9668
-	loader_version=0.16.10
+	minecraft_version=a1.1.2_01
+	yarn_mappings=a1.1.2_01+build.42
+	loader_version=0.15.6-babric.1
 
 # Mod Properties
-	mod_version=1.3.1
-	maven_group=net.danygames2014
+	mod_version=1.3.2
+	maven_group=com.floofyplasma
 	archives_base_name=gambac
 
 # Dependencies
-	stapi_version=2.0-alpha.2.4
+#	stapi_version=2.0-alpha.2.4
 
 # Extra Dependencies
-	modmenu_version=1.8.5-beta.11
+#	modmenu_version=1.8.5-beta.11
